third_party/move/move-compiler-v2/tests/ability-check/tmp2.move
module 0x42::test {
  struct R {}

  fun foo() {
    let x = R {};
    if (true) {
      x;
    } else {

    }
  }
}
